<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="movie"
            type="pl.piotrkulma.popularmoviesstage1.model.MovieDBResponse"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="101dp"
                android:id="@+id/title"
                tools:text="@string/mock_movie_title"
                tools:gravity="center_vertical"
                tools:padding="20dp"
                android:textSize="36sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/colorPrimaryMovie"
                tools:background="@color/colorPrimaryMovie"
                android:textColor="@android:color/background_light"
                android:text="@{movie.title}"/>

            <ImageView
                android:layout_width="129dp"
                android:layout_height="205dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/poster_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:id="@+id/releaseDate"
                tools:text="@string/mock_movie_release_date"
                android:textSize="34sp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:text="@{movie.releaseDateYear}"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp" />

            <TextView
                tools:text="@string/mock_movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/duration"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/releaseDate"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                android:layout_marginLeft="8dp"
                android:padding="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp" />

            <TextView
                tools:text="@string/mock_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/duration"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                android:layout_marginLeft="8dp"
                android:padding="0dp"
                android:text="@{movie.voteAgerageFull}"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp" />

            <TextView
                android:text="@string/mock_movie_favourite"
                android:layout_width="120dp"
                android:layout_height="61dp"
                android:id="@+id/favourite"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rating"
                android:padding="20dp"
                android:background="@color/colorPrimaryDarkMovie"
                android:textColor="@android:color/background_light"
                android:gravity="center_vertical" />

            <TextView
                tools:text="@string/mock_movie_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/synopsis"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:text="@{movie.plotSynopsis}"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>