<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/mock_trailer_name"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:id="@+id/movie_trailer_name"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:gravity="left|fill_vertical"
        app:layout_constraintLeft_toRightOf="@+id/movie_trailers_play_button"
        app:layout_constraintRight_toLeftOf="@+id/movie_trailers_share_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_play"
        android:id="@+id/movie_trailers_play_button"
        android:contentDescription="@string/play_button_description"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:id="@+id/movie_trailers_share_button"
        android:contentDescription="@string/share_button_description"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp" />

</android.support.constraint.ConstraintLayout>